--- a/jenkinsfile
+++ b/jenkinsfile
@@ -23,5 +23,10 @@ pipeline {
                 sh 'java Main'
             }
         }
+        stage('display message'){
+            steps{
+                echo 'Hello from Github'
+            }
+        }
     }
 }
